# Game-Of-Life

./: .gitignore  CMakeLists.txt  README.md
source/: game.cpp  game.hpp  grid.cpp  grid.hpp  main.cpp  window.cpp  window.hpp
